templates/domino_template.yaml
---
# Source: domino/templates/domino-database-deployment.yml
# Domino Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgres-service
spec:
  type: ClusterIP
  selector:
    app: release-name-postgres
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
---
# Source: domino/templates/domino-frontend-deployment.yml
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: release-name-frontend-service
spec:
  selector:
    app: release-name-frontend
  ports:
  - port: 80
---
# Source: domino/templates/domino-rest-deployment.yml
# Domino API Service
apiVersion: v1
kind: Service
metadata:
  name: release-name-rest-service
spec:
  type: ClusterIP
  selector:
    app: release-name-rest
  ports:
  - port: 8000
---
# Source: domino/templates/domino-database-deployment.yml
# Domino Database resource
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-postgres
  template:
    metadata:
      labels:
        app: release-name-postgres
    spec:
      containers:
        - name: release-name-postgres
          image: postgres:13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "pgdata"
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
      volumes:
        - hostPath:
            path: "/home/docker/pgdata"
          name: pgdata
---
# Source: domino/templates/domino-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-frontend
  labels:
    app: release-name-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-frontend
  template:
    metadata:
      labels:
        app: release-name-frontend
    spec:
      containers:
        - name: release-name-frontend
          image: ghcr.io/tauffer-consulting/domino-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
# Source: domino/templates/domino-rest-deployment.yml
# Domino REST Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-rest
  labels:
    app: release-name-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-rest
  template:
    metadata:
      labels:
        app: release-name-rest
    spec:
      containers:
        - name: release-name-rest
          image: ghcr.io/tauffer-consulting/domino-rest

          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
# Source: domino/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domino-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /api(/|$)(.*)
        backend:
          service:
            name: release-name-rest-service
            port:
              number: 8000
---
# Source: domino/templates/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domino-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: release-name-frontend-service
            port:
              number: 80
